# dotfilesv2

./: install.sh
archive/: notebook
assets/: packages.sh  rgpdf-pre.sh
assets/background/: generate.py  settings.py
assets/ruwal/: Cargo.toml
assets/ruwal/src/: helpers.rs  main.rs
system/grub-theme/: install
user/fish/.config/fish/conf.d/: aliases.fish
user/fish/.config/fish/functions/: copyfile.fish  open-get.fish  open-set.fish
user/foot/.config/foot/: foot.ini
user/foot/.config/ruwal/templates/: foot.ini
user/git/.config/git/: config
user/hide_desktop_entry/: entries.list  hide.desktop  install
user/i3/.config/i3/: config
user/i3wsr/.config/i3wsr/: config.toml
user/libinput/.config/: libinput-gestures.conf
user/polybar/.config/polybar/: config  spotify.sh
user/rofi/.config/rofi/: fullscreen.rasi  launch.sh  powermenu.sh  scripts.sh
user/ruwal/.config/ruwal/: theme.toml
user/spotify-tui/.config/spotify-tui/: config.yml
user/spotifyd/.config/spotifyd/: spotifyd.conf
user/sway/.config/sway/: autostart.conf  base.conf  config  definitions.conf  inputs.conf  outputs.conf  rules.conf  todo
user/sway/.config/sway/hotkeys/: 00-default.conf  01-workspace.conf  02-windows.conf  03-fnkeys.conf
user/sway/.config/sway/modes/: screenshot.conf
user/urxvt/: .Xresources
user/visual-studio-code/.vscode-oss/extensions/: colors-vscode-theme.json
user/waybar/.config/waybar/: config  style.css  toggle-light.sh
user/xss-lock/.config/xss-lock/: lock-post.sh  lock-pre.sh
user/zathura/.config/zathura/: zathurarc
(+6 files in other folders)
