[package]
name = "ruwal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
color_processing = "0.6"
toml = "0.5"
anyhow = "1.0"
glob = "0.3"
serde_json = "1.0"
tera = "1.12"
is_executable = "1.0"
thiserror = "1.0"
strum = "0.21"
strum_macros = "0.21"
